welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	for (i<-0 to nums.length - 1){
		if( nums(i)=1 && nums(i+1)==1+nums(i)){
			return true
		}else{
			return false
		}
	}
}
